# chunav-sathi

./: .gitignore  Dockerfile  README.md  chunav-saathi-buildplan.md  cloudbuild.yaml  dev-checklist.md
.claude/: settings.local.json
backend/: conftest.py  pyproject.toml
backend/app/: main.py
backend/app/core/: config.py  logging.py  security.py
backend/app/models/: schemas.py
backend/app/rag/: embed.py  index_builder.py  retriever.py
backend/app/routers/: chat.py  eligibility.py  timeline.py
backend/app/services/: firestore.py  gemini.py  secrets.py
backend/data/: eligibility.yaml  faqs.yaml  glossary.yaml  lok_sabha.yaml  panchayat.yaml  vidhan_sabha.yaml
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: ChatPanel.tsx  EligibilityForm.tsx  LanguageToggle.tsx  LevelSelector.tsx  Timeline.tsx  VoiceInput.tsx
frontend/src/hooks/: useChat.ts  useI18n.ts
frontend/src/locales/: en.json  hi.json
