[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chunav-saathi-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "google-genai>=1.0.0",
    "faiss-cpu>=1.8.0",
    "numpy>=1.26.0",
    "pyyaml>=6.0.0",
    "pydantic-settings>=2.0.0",
    "slowapi>=0.1.9",
    "python-multipart>=0.0.9",
    "google-cloud-firestore>=2.16.0",
    "google-cloud-secret-manager>=2.20.0",
    "google-cloud-translate>=3.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term --cov-report=html --cov-fail-under=70"

[tool.coverage.run]
source = ["app"]
omit = ["app/rag/index_builder.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
